- Add fontawesome icons - Add share buttons - Add zoom in/out button - fixes for layout on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ html, body {
 	 box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.99);
     -moz-box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.99);
     -webkit-box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.99);
+    z-index: 10;
 }
 
 #listlist{
@@ -83,7 +84,7 @@ html, body {
 	overflow-y:scroll;
 }
 
-#listlist li{
+#listlist .listing{
 	float:left;
 	width:86%;
 	margin:20px 5% 5px 5%;
@@ -98,9 +99,9 @@ html, body {
 	padding: 5px 2%;
 }
 
-#listlist li .btn{
-	padding-top: 8px;
-	height: 25px;
+#listlist .listing .btn{
+	/*padding-top: 8px;
+	height: 25px;*/
 }
 
 #btn_showall{
@@ -162,11 +163,18 @@ html, body {
 }
 
 .directions{
-	display:block;
+
+}
+
+.socialgroup, .toolgroup{
 	float:right;
 }
 
-#listlist li .btn.extlink{
+.btndetails{
+
+}
+
+/*.extlink{
 	display:block;
 	float:right;
 	margin-top:0px;
@@ -175,8 +183,7 @@ html, body {
 .detailsbtn{
 	display:block;
 	float:right;
-	margin-right:5px;
-}
+}*/
 
 #footer{
 	width:100%;
@@ -246,6 +253,19 @@ html, body {
 		height:38%;
 	}
 	
+	.socialgroup{
+		float:right;
+		clear:right;
+	}
+	
+	#listlist li .socialgroup .btn{
+		margin-top: 5px;
+	}
+	
+	.toolgroup{
+		clear:left;
+	}
+	
 	#footer{
 		height:6%;
 	}
@@ -269,7 +289,7 @@ html, body {
 	}
 	
 	#title{
-		font-size: 70%;;
+		font-size: 55%;
 	}
 
 	#overmap{
